# ds-template

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .sqlfluff  .yamllint.yaml  README.md  create_project.sh  init_project.sh  justfile  pyproject.toml  uv_setup.sh
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  pre-commit-ci-auto-merge.yml
ds_template/: __init__.py
old_poetry/: pyproject.toml
old_scripts_poetry/: init_project.sh  pyproject.toml
