[tool.poetry]
name = "ds-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipywidgets = "^8.1.2"
jupyterlab = "^4.1.5"
numpy = "^1.26.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
catboost = "^1.2.3"

[tool.poetry.group.dev.dependencies]
# do not add DVC to poetry, it is too slow
# linting and formatting
pre-commit = "^3.7.0"
# for vscode
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
flake8-simplify = "^0.21.0"
flake8-pyproject = "^1.2.3"
ruff = "^0.3.5"
mypy = "^1.9.0"
pylint = "^3.1.0"
# stubs for mypy type checking and code completions
typing-extensions = "^4.11.0"
pandas-stubs = "^2.2.1.240316"
types-pillow = "^10.2.0.20240406"
types-beautifulsoup4 = "^4.12.0.20240229"
types-tqdm = "^4.66.0.20240106"
types-seaborn = "^0.13.2.20240311"
types-requests = "^2.31.0.20240406"
types-pyyaml = "^6.0.12.20240311"
types-regex = "^2023.12.25.20240311"
types-openpyxl = "^3.1.0.20240408"

[tool.black]
line-length = 90
target-version = ["py39"]
# skip-magic-trailing-comma = true

[tool.ruff]
target-version = "py39"
line-length = 90
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # documentation
  "ANN101", # annotationg self in class methods, will be deprecated
  "RUF012", # mutable class attributes type checking
  "ANN102", # annotationg cls in class methods, will be deprecated
  "COM812", # missing-trailing-comma
  "FA100",  # future-annotations
]

[tool.isort]
profile = "black"
line_length = 90
float_to_top = true

[tool.flake8]
max-line-length = 90
extend-ignore = ["E203"] # Whitespace before ':' for black compatability

# [tool.bandit]
# exclude_dirs = []
# skips = ["B403", "B301"] # pickle files

# [tool.bandit.assert_used]
# skips = ['*_test.py', '*/test_*.py']

[tool.pylint]
py-version = "3.9"
max-line-length = 90
disable = [
  "C0116", # documentation
  "C0114", # documentation
  "C0115", # documentation
]

[tool.mypy]
python_version = "3.9"
strict = true
show_error_context = true
pretty = true
# ignore_missing_imports = true # ignore packages without type-checking

[tool.yamlfix]
comments_min_spaces_from_content = 1
explicit_start = false
none_representation = "null"
quote_representation = "\""
section_whitelines = 1
whitelines = 1
preserve_quotes = true # unless quote_representation bug is fixed

[tool.autoflake]
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
recursive = true
in-place = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
